--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,7 @@
 platform = espressif32
 board = az-delivery-devkit-v4
 framework = arduino
-;monitor_speed = 115200
-;monitor_port = COM8
+lib_deps = knolleary/PubSubClient@^2.8
+upload_port = COM8
+monitor_speed = 115200
+monitor_port = COM8
